--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
         "log_file": "debug.log"
     },
     "main_window": {
-        "title": "HFX",
+        "title": "PHP 8.1 MVP",
         "icon": "",
         "default_size": [800, 600],
         "minimum_size": [640, 480],
@@ -32,11 +32,11 @@
     "web_server": {
         "listen_on": ["127.0.0.1", 60106],
         "www_directory": "www",
-        "index_files": ["index.html", "index.php"],
+        "index_files": ["index.php"],
         "cgi_interpreter": "php/php-cgi.exe",
         "cgi_extensions": ["php"],
         "cgi_temp_dir": "",
-        "404_handler": "/pretty-urls.php",
+        "404_handler": "",
         "hide_files": []
     },
     "chrome": {
