--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
         "log_file": "debug.log"
     },
     "main_window": {
-        "title": "PHP 8.1 MVP",
+        "title": "HFX Desktop",
         "icon": "",
         "default_size": [800, 600],
         "minimum_size": [640, 480],
@@ -31,7 +31,7 @@
     },
     "web_server": {
         "listen_on": ["127.0.0.1", 60106],
-        "www_directory": "www",
+        "www_directory": "www/public",
         "index_files": ["index.php"],
         "cgi_interpreter": "php/php-cgi.exe",
         "cgi_extensions": ["php"],
