--- a/www/composer.json
+++ b/www/composer.json
@@ -1,31 +1,15 @@
 {
     "name": "fadil/hfx",
-    "description": "Basic Micro MVC",
+    "description": "Micro app - one file API",
     "authors": [
         {
             "name": "fadilxcoder",
             "email": "fadil@xcoder.dvlpr"
         }
     ],
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
     "require": {
-        "symfony/http-kernel": "^5.2",
-        "symfony/http-foundation": "^5.2",
-        "vlucas/phpdotenv": "^5.3",
-        "twig/twig": "^3.0",
-        "php-di/php-di": "^6.3",
-        "symfony/asset": "^5.2",
-        "nikic/fast-route": "^1.3",
-        "mnapoli/silly": "^1.7",
-        "fakerphp/faker": "^1.19",
-        "robmorgan/phinx": "^0.12.12",
-        "fadilxcoder/chrome-php-logger": "^1.0"
+        "ramsey/uuid": "^4.7"
     },
-    "require-dev": {
-        "filp/whoops": "^2.13"
-    }
+    "repositories": [
+    ]    
 }
